[gd_scene load_steps=11 format=3 uid="uid://bh8l16xiwt3ac"]

[ext_resource type="FontFile" path="res://NEAT_usability/fonts/dynamics/roboto-thin.tres" id="1"]
[ext_resource type="Texture2D" uid="uid://7t48wqqhdifq" path="res://demos/demo_loader/launch_button_textures/cars_texture.png" id="2"]
[ext_resource type="Texture2D" uid="uid://87prfct87u8t" path="res://demos/demo_loader/launch_button_textures/cars_hover_texture.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bsbojysupsajt" path="res://demos/demo_loader/launch_button_textures/xor_texture.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dhwevwjj11d1b" path="res://demos/demo_loader/launch_button_textures/landers_texture.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dxmg5cet2636c" path="res://demos/demo_loader/launch_button_textures/xor_hover_texture.png" id="6"]
[ext_resource type="Texture2D" uid="uid://mu37o35ikfwo" path="res://demos/demo_loader/launch_button_textures/landers_hover_texture.png" id="7"]
[ext_resource type="Script" uid="uid://b8ng8o8hgy1p" path="res://demos/demo_loader/demo_loader.gd" id="8"]

[sub_resource type="Gradient" id="1"]
offsets = PackedFloat32Array(0, 0.896774)
colors = PackedColorArray(0.529412, 0.192157, 0.541176, 1, 0.333333, 0.454902, 0.705882, 1)

[sub_resource type="GradientTexture2D" id="2"]
gradient = SubResource("1")

[node name="DemoLoader" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("8")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource("2")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
text = "Neat for Godot"
horizontal_alignment = 1

[node name="Launchers" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="CarLauncher" type="TextureButton" parent="MarginContainer/VBoxContainer/Launchers"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("2")
texture_pressed = ExtResource("2")
texture_hover = ExtResource("3")

[node name="LanderLauncher" type="TextureButton" parent="MarginContainer/VBoxContainer/Launchers"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("5")
texture_pressed = ExtResource("5")
texture_hover = ExtResource("7")

[node name="XorLauncher" type="TextureButton" parent="MarginContainer/VBoxContainer/Launchers"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("4")
texture_pressed = ExtResource("4")
texture_hover = ExtResource("6")
